kubernetes/linkwarden/linkwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  labels:
    app: linkwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.9.3
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: linkwarden-storage
              mountPath: /data/data
      volumes:
        - name: linkwarden-storage
          persistentVolumeClaim:
            claimName: linkwarden-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
spec:
  selector:
    app: linkwarden
  ports:
    - protocol: TCP
      name: api
      port: 80
      targetPort: 3000
